# bazalt

./: .gitignore  10cubes.frag  10cubes.vert  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  cube.vert  pyproject.toml  test.py  test_10cubes.py  test_cube.py  test_empty.py  test_glm.py  test_triangle.py
.github/workflows/: build.yml
bazalt/: __init__.py  _core.pyi
examples/: cube_tex.frag  cube_tex.vert  test_10cubes.py  test_cube.py  test_cube_texture.py  test_empty.py  test_texture.py  test_triangle.py
examples/01_empty_window/: main.py
examples/02_triangle/: main.py
examples/03_textured_quad/: main.py
examples/04_colored_cube/: main.py
examples/05_textured_cube/: main.py
examples/06_multiple_cubes/: main.py
examples/07_model_loading/: main.py
examples/13_compute_postprocess/: fullscreen.vert  main.py  pattern.comp  present.frag
examples/15_msaa/: cube.frag  main.py
examples/16_env_capture/: main.py  reflect.frag  reflect.vert  solid.vert
examples/17_cascade_shadows/: depth.vert  main.py  scene.frag  scene.vert
examples/18_multiview/: capture_mv.vert  main.py  reflect.frag  reflect.vert  solid.vert
examples/model_loader/: main.py
lumapy/: __init__.py  _core.pyi
src/: Buffer.hpp  CommandBuffer.hpp  Context.hpp  DescriptorSet.hpp  Image.hpp  Logger.hpp  Pipeline.hpp  RenderTarget.hpp  Renderer.hpp  ResourceTracker.hpp  ShaderCompiler.hpp  UploadManager.hpp  main.cpp  window.hpp
tests/: conftest.py  test_barriers.py  test_bindings.py  test_chaining.py  test_compute.py  test_diagnostics.py  test_errors.py  test_readme.py  test_render_to_layer.py  test_shaders.py  test_storage_images.py  test_stubs.py
tests/shaders/: array_view.frag  depth_array_view.frag  fullscreen_vs.hlsl  multiview_color.frag  store_const.comp  store_scale.comp  uv_gradient.frag  uv_gradient_ps.hlsl
