[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "lumapy"
version = "0.0.1"
description = "Python library for rapid GPU shader prototyping using Vulkan"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Piotr Szamocki"}]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/SzamockiP/lumapy"
Repository = "https://github.com/SzamockiP/lumapy"

[project.optional-dependencies]
examples = ["PyGLM"]

[tool.scikit-build]
wheel.packages = ["lumapy"]

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = ["-A", "x64"]